ghc-4335c07/testsuite/tests/typecheck/should_compile/T8563.hs
{-# LANGUAGE PolyKinds #-}
module Tagged where

newtype Tagged s b = Tagged b deriving Eq
