ghc-4335c07/testsuite/tests/typecheck/should_fail/T11623.hs
{-# LANGUAGE TypeFamilies #-}

module T11623 where

type family T where { Maybe T = Int }
